re PR fortran/29779 (vectorizer fortran testcases failing)

2006-12-18  Andrew Pinski  <pinskia@gmail.com>

        PR target/29779
        * config/rs6000/rs6000.c (altivec_init_builtins): Change to set
        READONLY on __builtin_altivec_mask_for_load instead of adding
        the attribute.

From-SVN: r120045